# hito-koto-diary

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
hitokoto/: hito_koto_diary.py
hitokoto/config/: .env.sample  config.py
hitokoto/google/: spreadsheets.py
src/environments/: _version.py
src/hitokoto/: hito_koto_diary.py
src/hitokoto/config/: config.py
src/hitokoto/lib/google/: spreadsheets.py
