[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hito-koto-diary"
description = "ヒトコト日記 - Google Spreadsheet に対しての読み込み、書き込み操作を行う"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10"
]
requires-python = "==3.10.*"
dependencies = [
    "httplib2~=0.21.0",
    "google-api-python-client~=2.73.0",
    "oauth2client~=4.1.3",
    "click~=8.1.3",
    "python-dotenv~=0.21.0",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/tomotaka-yamasaki/hito-koto-diary"

[project.scripts]
"hitokoto" = "hitokoto.hito_koto_diary:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "environments._version.version"}

[tool.setuptools_scm]
write_to = "src/environments/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.black]
target-version = ['py310']
include = '\.py$'
line-length = 120

[tool.isort]
profile = "black"
py_version = 310
line_length = 120
