[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hito-koto-diary"
description = "ヒトコト日記 - Google Spreadsheet に対しての読み込み、書き込み操作を行う"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httplib2>=0.21.0",
    "google-api-python-client>=2.73.0",
    "google-auth>=2.22.0",
    "click>=8.1.3",
    "python-dotenv>=0.21.0",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/tomotaka-yamasaki/hito-koto-diary"

[project.scripts]
"hitokoto" = "hitokoto.hito_koto_diary:main"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.hatch.build]
artifacts = [
    "src/hitokoto/config/.env",
    "src/hitokoto/credentials/credentials.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hitokoto"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "N", "T20", "I"]
ignore = ["F403", "F405", "E402"]

[tool.ruff.lint.per-file-ignores]
"src/hitokoto/hito_koto_diary.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["hitokoto"]
